tests/reference/asr-matrix_transpose_01-f8038ce.stderr
semantic error: transpose accepts arrays of rank 2 only, provided an array with rank, 1
 --> tests/errors/matrix_transpose_01.f90:4:24
  |
4 |     print *, transpose(a)
  |                        ^ 
